添加NavigationController 转场动画

--- a/XXBTransitionAnimationDemo/XXBTransitionAnimationDemo/Base.lproj/Main.storyboard
+++ b/XXBTransitionAnimationDemo/XXBTransitionAnimationDemo/Base.lproj/Main.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="jc8-Yr-pXn">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="jc8-Yr-pXn">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -24,13 +24,49 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="828" y="12"/>
+            <point key="canvasLocation" x="903" y="9"/>
+        </scene>
+        <!--Transition List Controller-->
+        <scene sceneID="xz1-qd-Cnl">
+            <objects>
+                <viewController id="LKF-DX-5nh" customClass="XXBTransitionListController" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="0X9-qP-3Z9">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="cnv-xV-FhK"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="xEL-8W-1vy"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ad8-Sb-J8W" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="902" y="748"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="Mtv-Pf-h7b">
+            <objects>
+                <navigationController id="p90-xq-85M" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" systemItem="mostRecent" id="QMF-dE-ziR"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="rPG-bE-sJx">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <toolbar key="toolbar" opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="9cD-8t-ECw">
+                        <autoresizingMask key="autoresizingMask"/>
+                    </toolbar>
+                    <connections>
+                        <segue destination="LKF-DX-5nh" kind="relationship" relationship="rootViewController" id="hGr-L6-t1A"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="wIz-9b-3d2" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="161" y="748"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="vwh-Bb-2FL">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="RMv-Ic-H6Y" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" systemItem="bookmarks" id="RU1-H1-Uwy"/>
+                    <tabBarItem key="tabBarItem" systemItem="favorites" id="RU1-H1-Uwy"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="2fd-hD-sGd">
                         <rect key="frame" x="0.0" y="20" width="375" height="44"/>
@@ -43,7 +79,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Wge-fu-Kmg" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="134" y="11"/>
+            <point key="canvasLocation" x="161" y="10"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="HMU-rk-e9C">
@@ -51,16 +87,18 @@
                 <tabBarController automaticallyAdjustsScrollViewInsets="NO" id="jc8-Yr-pXn" sceneMemberID="viewController">
                     <toolbarItems/>
                     <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="ioO-b9-cRi">
+                        <rect key="frame" x="0.0" y="0.0" width="1000" height="1000"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </tabBar>
                     <connections>
-                        <segue destination="RMv-Ic-H6Y" kind="relationship" relationship="viewControllers" id="WfH-3n-dO4"/>
+                        <segue destination="p90-xq-85M" kind="relationship" relationship="viewControllers" id="HCa-6L-0sL"/>
+                        <segue destination="RMv-Ic-H6Y" kind="relationship" relationship="viewControllers" id="LYI-Fi-Nk6"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="nJE-er-Zyp" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-555.20000000000005" y="12.593703148425789"/>
+            <point key="canvasLocation" x="-652" y="480"/>
         </scene>
     </scenes>
 </document>
